# strpy

./: .gitignore  ALGORITHM_STATUS.md  BUG_FIX_SUMMARY.md  GETTING_STARTED.md  LICENSE  MIGRATION.md  QUICKREF.md  README.md  pyproject.toml
docs/: R_INSTALLATION.md  R_VALIDATION_SUMMARY.md
examples/: 01_basic_usage.ipynb  01_quickstart.ipynb  02_advanced.ipynb  02_comparison_study.ipynb  03_simulation_study.ipynb  03_working_str_example.py  README.md  basic_example.py
scripts/: install_r.sh
src/strpy/: __init__.py  simulations.py  str.py  str_simple.py  utils.py
tests/: __init__.py  r_bridge.py  test_r_comparison.py  test_regression.py  test_simulations.py  test_str_simple.py  test_utils.py
tests/fixtures/: generate_test_data.py  test10_stochastic.csv  test1_simple_weekly.csv  test2_multiple_seasonalities.csv  test3_short_series.csv  test4_high_noise.csv  test5_deterministic.csv  test6_pure_sine.csv  test7_long_series.csv  test8_weak_seasonal.csv  test9_strong_seasonal.csv
tests/r_scripts/: run_str.R
